# token-notifier

./: .gitignore  CLAUDE.md  README.md
.omc/plans/: token-notifier-consensus-plan.md
.omc/specs/: deep-interview-token-notifier.md
docs/: DISTRIBUTION.md  INSTALL-ko.md  PACKAGING.md
docs/spike/: LOG_FORMAT.md
scripts/: package-macos.sh
src/: index.html  popover.css  popover.html  popover.js  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: alerts.rs  autostart.rs  config.rs  lib.rs  main.rs  native_status.rs  remote_sync.rs  runtime.rs  scheduler.rs  settings.rs  storage.rs  tray.rs  window_estimator.rs
src-tauri/src/parser/: claude_code.rs  codex.rs  mod.rs
