[package]
name = "token-notifier"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "token_notifier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.37.0", features = ["bundled"] }
dirs = "6.0.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
