[package]
name = "token-notifier"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "token_notifier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.37.0", features = ["bundled"] }
dirs = "6.0.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
toml = "0.9.12"
[target.'cfg(target_os = "macos")'.dependencies]
smappservice-rs = "0.1.3"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
objc2-app-kit = { version = "0.3.2", features = ["NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSButton", "NSControl", "NSView", "NSResponder", "objc2-core-foundation"] }

[dev-dependencies]
tempfile = "3.23.0"
